--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,44 @@
 @import url("https://fonts.googleapis.com/css?family=Karla:400,700|Lobster+Two");
-.header-section {
-  background-color: #1f170f;
+.body {
+  margin: 0;
+  padding: 0;
+  border: 1px solid transparent; }
+
+.main-section {
   display: grid;
-  grid-template-columns: 65% auto;
-  grid-template-rows: auto; }
+  grid-template-columns: 1fr; }
+
+.header-section {
+  height: 100%;
+  display: grid;
+  grid-template-columns: 70% 1fr;
+  grid-template-rows: 100vh; }
+
+.header-section__hero-image {
+  width: 100%; }
 
 .nav-section {
   background-color: #1f170f;
-  text-align: center; }
+  text-align: center;
+  padding: 30% 0; }
   .nav-section .nav-section__logo {
     color: #6985ac;
-    font-family: "Lobster Two", cursive; }
+    font-family: "Lobster Two", cursive;
+    font-size: 2.5em;
+    vertical-align: middle; }
+  .nav-section .nav-section__button--projects {
+    text-decoration: none;
+    color: #1f170f;
+    background-color: #ffa12e;
+    font-family: "Karla", sans-serif;
+    font-weight: bold;
+    padding: 10px;
+    border: 1px solid #1f170f;
+    border-radius: 30px; }
+  .nav-section .nav-section__button--projects:hover {
+    padding: 30px;
+    border-radius: 70px; }
 
-.header-section__image-container .header-section__hero-image {
-  width: 100%; }
+.footer {
+  height: 100px;
+  background-color: #222; }
