--- a/src/App.scss
+++ b/src/App.scss
@@ -1,31 +1,69 @@
 @import url('https://fonts.googleapis.com/css?family=Karla:400,700|Lobster+Two');
 
 @import "./styles/variables.scss";
+.body {
+  margin: 0;
+  padding: 0;
+  border: 1px solid transparent;
+}
+
+.main-section {
+  
+  display: grid;
+  grid-template-columns: 1fr;
+}
 
 .header-section {
-  background-color: $brown;
+  height: 100%;
   display: grid;
-  grid-template-columns: 65% auto;
-  grid-template-rows: auto;
+  grid-template-columns: 70% 1fr;
+  grid-template-rows: 100vh;
+}
+
+
+.header-section__hero-image {
+
+  width: 100%;
 }
 
 .nav-section {
   background-color: $brown;  
   text-align: center;
+  padding:  30% 0;
 
   .nav-section__logo {
     color: $light_blue;
     font-family: $highlight_font;
+    font-size: 2.5em;
+    vertical-align: middle;
+  }
+
+  .nav-section__button--projects {
+    text-decoration: none;
+    color: $brown;
+    background-color: #ffa12e;
+    font-family: $main_font;
+    font-weight: bold;
+    padding: 10px;
+    
+    border: 1px solid $brown;
+    border-radius: 30px;
+    
+  }
+
+  .nav-section__button--projects:hover {
+    padding: 30px;
+    border-radius: 70px;
   }
 }
 
-.header-section__image-container {
-  
-
-  .header-section__hero-image {
-    width: 100%; 
-  }
+.footer {
+  height: 100px;
+  background-color: #222;
 }
+
+
+
 
 
 
