--- a/src/App.css
+++ b/src/App.css
@@ -26,18 +26,28 @@
     font-family: "Lobster Two", cursive;
     font-size: 2.5em;
     vertical-align: middle; }
-  .nav-section .nav-section__button--projects {
-    text-decoration: none;
-    color: #1f170f;
-    background-color: #ffa12e;
-    font-family: "Karla", sans-serif;
-    font-weight: bold;
-    padding: 10px;
-    border: 1px solid #1f170f;
-    border-radius: 30px; }
-  .nav-section .nav-section__button--projects:hover {
-    padding: 30px;
-    border-radius: 70px; }
+
+.nav-section__button--projects {
+  display: block;
+  width: 200px;
+  height: 25px;
+  margin-left: 80px;
+  text-decoration: none;
+  background-color: #ffa12e;
+  color: #1f170f;
+  padding-top: 5px;
+  font-family: "Karla", sans-serif;
+  font-weight: bold;
+  border: 1px solid #1f170f;
+  border-radius: 30px;
+  transition: all 1s; }
+
+.nav-section__button--projects:hover {
+  width: 125px;
+  height: 70px;
+  border-radius: 130px;
+  margin-left: 115px;
+  padding-top: 55px; }
 
 .footer {
   height: 100px;
