--- a/src/App.scss
+++ b/src/App.scss
@@ -36,6 +36,8 @@
     font-family: $highlight_font;
     font-size: 2.5em;
     vertical-align: middle;
+    position: relative;
+    z-index: 9;
   }
  
 }
@@ -53,12 +55,15 @@
   font-weight: bold;
   border: 1px solid $brown;
   border-radius: 30px;
-  transition: all 1s;
+  transition: all 500ms;
+  position: absolute;
+  z-index: 1;
+  top: 120px;
 
 }
 
 .nav-section__button--projects:hover {
-  
+  color: transparent;
   width: 125px;
   height: 70px;
   border-radius: 130px;
