Add subtitle and dash to Header.js file

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Karla:400,700|Lobster+Two');
+
 $light_blue: #6985ac;
 $highlight_blue: #5899f5;
 $gray: #1f170f;
