--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Karla:400,700|Lobster+Two");
-.body {
+* {
   margin: 0;
-  padding: 0;
-  border: 1px solid transparent; }
+  padding: 0; }
 
 .main-section {
   display: grid;
@@ -19,33 +18,35 @@
 
 .nav-section {
   background-color: #1f170f;
-  text-align: center;
-  padding: 30% 0; }
+  text-align: center; }
   .nav-section .nav-section__logo {
     color: #6985ac;
     font-family: "Lobster Two", cursive;
     font-size: 2.5em;
-    vertical-align: middle;
     position: relative;
     z-index: 9; }
+  .nav-section .nav-section__subtitle {
+    color: #6985ac;
+    font-family: "Lobster Two", cursive;
+    font-size: 1.5em;
+    padding-bottom: 20px; }
 
 .nav-section__button--projects {
   display: block;
+  position: absolute;
+  z-index: 1;
   width: 200px;
   height: 25px;
-  margin-left: 80px;
+  margin-left: 85px;
   text-decoration: none;
-  background-color: #ffa12e;
+  background-color: #f3b54a;
   color: #1f170f;
   padding-top: 5px;
   font-family: "Karla", sans-serif;
   font-weight: bold;
   border: 1px solid #1f170f;
   border-radius: 30px;
-  transition: all 500ms;
-  position: absolute;
-  z-index: 1;
-  top: 120px; }
+  transition: all 500ms; }
 
 .nav-section__button--projects:hover {
   color: transparent;
@@ -58,3 +59,9 @@
 .footer {
   height: 100px;
   background-color: #222; }
+
+#login {
+  position: relative;
+  top: -40px;
+  color: white;
+  z-index: 9; }
