--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Karla:400,700|Lobster+Two');
 
 @import "./styles/variables.scss";
-.body {
+
+* {
   margin: 0;
   padding: 0;
-  border: 1px solid transparent;
 }
 
 .main-section {
-  
   display: grid;
   grid-template-columns: 1fr;
 }
@@ -22,33 +20,42 @@
 
 
 .header-section__hero-image {
-
   width: 100%;
 }
 
 .nav-section {
   background-color: $brown;  
   text-align: center;
-  padding:  30% 0;
 
   .nav-section__logo {
     color: $light_blue;
     font-family: $highlight_font;
     font-size: 2.5em;
-    vertical-align: middle;
     position: relative;
     z-index: 9;
+  }
+
+  
+
+  .nav-section__subtitle {
+    color: $light_blue;
+    font-family: $highlight_font;
+    font-size: 1.5em;
+    padding-bottom: 20px;
   }
  
 }
 
 .nav-section__button--projects {
   display: block;
+  position: absolute;
+  z-index: 1;
+  // top: 120px;
   width: 200px;
   height: 25px;
-  margin-left: 80px;
+  margin-left: 85px;
   text-decoration: none;
-  background-color: #ffa12e;
+  background-color: #f3b54a;
   color: $brown;
   padding-top: 5px;
   font-family: $main_font;
@@ -56,9 +63,6 @@
   border: 1px solid $brown;
   border-radius: 30px;
   transition: all 500ms;
-  position: absolute;
-  z-index: 1;
-  top: 120px;
 
 }
 
@@ -76,7 +80,12 @@
   background-color: #222;
 }
 
-
+#login {
+  position: relative;
+  top: -40px;
+  color: white;
+  z-index: 9;
+}
 
 
 
