--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@
   height: 100%;
   display: grid;
   grid-template-columns: 70% 1fr;
-  grid-template-rows: 100vh; }
+  grid-template-rows: 100vh;
+  overflow: hidden; }
 
 .header-section__hero-image {
   width: 100%; }
@@ -22,46 +23,46 @@
   .nav-section .nav-section__logo {
     color: #6985ac;
     font-family: "Lobster Two", cursive;
-    font-size: 2.5em;
-    position: relative;
-    z-index: 9; }
+    font-size: 2.5em; }
+  .nav-section .nav-section__dash {
+    color: #fff;
+    font-size: 1.8em;
+    padding-bottom: 20px; }
   .nav-section .nav-section__subtitle {
     color: #6985ac;
     font-family: "Lobster Two", cursive;
-    font-size: 1.5em;
+    font-size: 1.7em;
     padding-bottom: 20px; }
+  .nav-section .nav-section__list {
+    list-style: none;
+    display: inline-block; }
+  .nav-section .nav-section__links {
+    text-decoration: none;
+    margin-right: 10px;
+    color: #6985ac;
+    font-family: "Karla", sans-serif;
+    font-weight: 700; }
 
 .nav-section__button--projects {
-  display: block;
-  position: absolute;
-  z-index: 1;
+  display: inline-block;
+  text-decoration: none;
   width: 200px;
   height: 25px;
-  margin-left: 85px;
-  text-decoration: none;
   background-color: #f3b54a;
   color: #1f170f;
   padding-top: 5px;
+  margin-bottom: 20px;
+  text-align: center;
   font-family: "Karla", sans-serif;
   font-weight: bold;
   border: 1px solid #1f170f;
   border-radius: 30px;
   transition: all 500ms; }
 
-.nav-section__button--projects:hover {
-  color: transparent;
-  width: 125px;
-  height: 70px;
-  border-radius: 130px;
-  margin-left: 115px;
-  padding-top: 55px; }
-
 .footer {
   height: 100px;
   background-color: #222; }
 
-#login {
-  position: relative;
-  top: -40px;
-  color: white;
-  z-index: 9; }
+.project-section {
+  height: 300px;
+  background-color: #6985ac; }
