--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,29 @@
 @import url("https://fonts.googleapis.com/css?family=Karla:400,700|Lobster+Two");
+.login-section {
+  background-color: #6985ac;
+  padding: 30px; }
+
+.login-form__input {
+  padding: 7px;
+  display: block;
+  border: none;
+  width: 50%;
+  border-radius: 3px;
+  margin: 15px 0; }
+
+.login-form__button {
+  padding: 7px;
+  border: none;
+  border-radius: 3px;
+  width: 20%;
+  background-color: #1f170f;
+  color: #5899f5;
+  font-weight: 700; }
+
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-family: "Karla", sans-serif; }
 
 .main-section {
   display: grid;
@@ -40,7 +62,6 @@
     text-decoration: none;
     margin-right: 10px;
     color: #6985ac;
-    font-family: "Karla", sans-serif;
     font-weight: 700; }
 
 .nav-section__button--projects {
@@ -53,7 +74,6 @@
   padding-top: 5px;
   margin-bottom: 20px;
   text-align: center;
-  font-family: "Karla", sans-serif;
   font-weight: bold;
   border: 1px solid #1f170f;
   border-radius: 30px;
