--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,11 @@
 
 @import "./styles/variables.scss";
+@import "./styles/form-styles.scss";
 
 * {
   margin: 0;
   padding: 0;
+  font-family: $main-font;
 }
 
 .main-section {
@@ -18,7 +20,6 @@
   grid-template-rows: 100vh;
   overflow: hidden;
 }
-
 
 .header-section__hero-image {
   width: 100%;
@@ -56,7 +57,6 @@
     text-decoration: none;
     margin-right: 10px;
     color: $light-blue;
-    font-family: $main_font;
     font-weight: 700;
   }
  
@@ -72,7 +72,6 @@
   padding-top: 5px;
   margin-bottom: 20px;
   text-align: center;
-  font-family: $main_font;
   font-weight: bold;
   border: 1px solid $brown;
   border-radius: 30px;
