--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Karla:400,700|Lobster+Two");
-.login-section {
+.form-section {
   background-color: #6985ac;
   padding: 30px; }
 
-.login-form__input {
+.form-section__input {
   padding: 7px;
   display: block;
   border: none;
@@ -11,14 +11,22 @@
   border-radius: 3px;
   margin: 15px 0; }
 
-.login-form__button {
+.form-section__error {
+  display: block; }
+
+.form-section__button {
+  display: block;
   padding: 7px;
-  border: none;
+  border: 2px solid #1f170f;
   border-radius: 3px;
-  width: 20%;
+  width: 15%;
   background-color: #1f170f;
   color: #5899f5;
   font-weight: 700; }
+
+.form-section__button:hover {
+  color: #1f170f;
+  background-color: transparent; }
 
 * {
   margin: 0;
