Add Login error message in Login.jsx container.

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@
 .form-section__error {
   display: block; }
 
+.form-section__signup-error-div, .form-section__login-error-div {
+  background-color: #e44e4e;
+  margin-bottom: 20px; }
+
 .form-section__button {
   display: block;
   padding: 7px;
