Add Projects container and Project component. Add fetchProject action creator. fetch all projects from ProjectsContainer. Display fetched projects using Project Component. Add Projectto redux store using authReducer. Add Logout container and action creator.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 
 @import "./styles/variables.scss";
 @import "./styles/form-styles.scss";
+@import "./styles/project-styles.scss";
 
 * {
   margin: 0;
@@ -93,11 +94,6 @@
   background-color: #222;
 }
 
-.project-section {
-  height: 300px;
-  background-color: $light_blue;
-
-}
 
 
 
