--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,27 @@
   color: #1f170f;
   background-color: transparent; }
 
+.project-section {
+  display: grid;
+  grid-template-columns: repeat(3, 4fr);
+  background-color: #6985ac;
+  padding: 15px; }
+
+.project-card {
+  display: inline-block;
+  padding: 20px;
+  width: 100%;
+  height: 300px;
+  margin-top: 5%;
+  background-color: aliceblue; }
+  .project-card .project-card__title {
+    font-family: "Lobster Two", cursive;
+    color: #1f170f;
+    font-weight: bold;
+    font-size: 1.5em; }
+  .project-card .project-card__link {
+    text-decoration: none; }
+
 * {
   margin: 0;
   padding: 0;
@@ -94,7 +115,3 @@
 .footer {
   height: 100px;
   background-color: #222; }
-
-.project-section {
-  height: 300px;
-  background-color: #6985ac; }
