--- a/src/styles/_form-styles.scss
+++ b/src/styles/_form-styles.scss
@@ -1,38 +1,48 @@
 .form-section {
   background-color: $light-blue;
   padding: 30px;
+
+  .form-section__title {
+    font-size: 2em;
+    padding-bottom: 20px;
+  }
+
+  .form-section__input {
+    padding: 7px;
+    display: block;
+    border: none;
+    width: 50%;
+    border-radius: 3px;
+    margin: 15px 0;
+  }
+
+  .form-section__button {
+    display: block;
+    padding: 7px;
+    border: 2px solid $brown;
+    border-radius: 3px;
+    width: 15%;
+    background-color: $brown;
+    color: $highlight-blue;
+    font-weight: 700;
+  }
+  
+  .form-section__button:hover {
+    color: $brown;
+    background-color: transparent;
+  }
+
+  .form-section__error {
+    display: block;
+  }
+  
+  .form-section__signup-error-div, .form-section__login-error-div {
+    background-color: rgb(228, 78, 78);
+    margin-bottom: 20px;
+  }
 }
 
-.form-section__input {
-  padding: 7px;
-  display: block;
-  border: none;
-  width: 50%;
-  border-radius: 3px;
-  margin: 15px 0;
-}
 
-.form-section__error {
-  display: block;
-}
 
-.form-section__signup-error-div, .form-section__login-error-div {
-  background-color: rgb(228, 78, 78);
-  margin-bottom: 20px;
-}
 
-.form-section__button {
-  display: block;
-  padding: 7px;
-  border: 2px solid $brown;
-  border-radius: 3px;
-  width: 15%;
-  background-color: $brown;
-  color: $highlight-blue;
-  font-weight: 700;
-}
 
-.form-section__button:hover {
-  color: $brown;
-  background-color: transparent;
-}
